overflow fixed

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -234,7 +234,7 @@
       }
       .imageContainer {
         position: absolute;
-        right: -10%;
+        right: 0%;
         width: 200px;
         @media screen and (max-width: $screen-lg) {
           img {
